--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
 
 
     <nav class="navbar">
-      <div class="navbar-container container">
+      <div class="navbar-container container" >
           <input type="checkbox" name="" id="">
           <div class="hamburger-lines">
               <span class="line line1"></span>
               <span class="line line2"></span>
               <span class="line line3"></span>
           </div>
+          
           <ul class="menu-items">
               <li><a href="#">Home</a></li>
               <li><a href="#">About</a></li>
@@ -50,7 +51,7 @@
               <li><a href="#">Testimonial</a></li>
               <li><a href="#">Contact</a></li>
           </ul>
-          <h1 class="logo">Navbar</h1>
+          <img class="logo" src="lkjhk.png" alt="">
       </div>
   </nav>
 
@@ -88,15 +89,15 @@
     </div>
 
 
-    <div style="display: flex; margin-top: -15px; padding: 0px; margin-left: auto; margin-right: auto;">
+    <div style="display: flex; padding: 0px; margin-left: auto; margin-right: auto; background-color:azure;">
       <div id="fl">
         <img class="appar" src="gitanjali-apartments-images-for-elevation-of-npr-gitanjali-apartments-28813799.jpeg" alt="">
       </div>
       <div id="fl"><h1 class="appar-text">APPARTMENTS</h1></div>
     </div>
+      
 
-
-    <div style="display: flex; margin-top: -15px; padding: 0px; margin-left: auto; margin-right: auto;">
+    <div style="display: flex; padding: 0px; margin-left: auto; margin-right: auto;">
       <div id="fl"><h1 class="appar-text">VILLAS</h1></div>
       <div id="fl">
         <img class="appar" src="istockphoto-488120139-612x612.jpg" alt="">  
@@ -104,7 +105,7 @@
     </div>
 
 
-    <div style="display: flex; margin-top: -15px; padding: 0px; margin-left: auto; margin-right: auto;">
+    <div style="display: flex; padding: 0px; margin-left: auto; margin-right: auto;">
       <div id="fl">
         <img class="appar" src="photo-1612637968894-660373e23b03.jfif" alt="">  
       </div>
