--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div id="fl">
         <img class="appar" src="gitanjali-apartments-images-for-elevation-of-npr-gitanjali-apartments-28813799.jpeg" alt="">
       </div>
-      <div id="fl"><h1 class="appar-text">APPARTMENTS</h1></div>
+      <div id="fl"><h1 class="appar-text">APP</h1></div>
     </div>
       
 
