--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </div>
     </nav> -->
 
-
-    <nav class="navbar">
-      <div class="navbar-container container" >
+ 
+    <nav class="navbar" >
+      <div class="navbar-container" style="width: 100%;"  >
           <input type="checkbox" name="" id="">
           <div class="hamburger-lines">
               <span class="line line1"></span>
