--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     <h2 class="flats-heading">FLAT'S</h2>
     <hr  size="8" color="#003300"  class="heading-line"></h1>
 
-
-    <div class="card-container">
+    
+    <div class="card-container" style="width: 99%;">
 
       <div class="box">
        <div class="img-container"> 
@@ -389,7 +389,7 @@
     <hr  size="8" color="#003300"  class="heading-line"></h1>
 
 
-    <div class="card-container" style="margin-bottom: 0px; padding-bottom:12%; width:85%">
+    <div class="card-container" style="margin-bottom: 0px; padding-bottom:12%; width:99%">
 
       <div class="box">
        <div class="img-container"> 
