--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="3d-electric-car-building.jpg" style="height: 40rem; width: 100%;" alt="">
+        <img src="fl1.png"" style="height: 40rem; width: 100%;" alt="">
         <div class="carousel-caption">
           <h5 style="font-family: Audiowide;">First slide label</h5>
           <p>Some representative placeholder content for the first slide.</p>
@@ -131,19 +131,19 @@
             <hr style="margin-top: 0px;">
             <div class="container-prop card-bottom-text" >
              <div class="prop">
-               <p class="dd">bedrooms</p>
+               <p class="dd responsive-card-text">bedrooms</p>
                <i class="fas fa-bed"></i>
-               <p class="num">3</p>
+               <p class="num responsive-card-text">3</p>
              </div>
              <div class="prop">
-               <p>bathrooms</p>
+               <p class="responsive-card-text">bathrooms</p>
                <i class="fas fa-bath"></i>
-               <p class="num">3</p>
+               <p class="num responsive-card-text">3</p>
              </div>
              <div class="prop">
-               <p> area </p>
+               <p class="responsive-card-text"> area </p>
                <i class="far fa-square"></i>
-               <p class="num">4300 <span>sq ft</span></p>
+               <p class="num responsive-card-text">4300 <span>sq ft</span></p>
              </div>
             </div>
           </div>
@@ -500,7 +500,7 @@
   <div style="background-color: #f2f2f2; height: 500px;">
       <div class="box">
         <div class="img-container"> 
-          <iframe class="embed-responsive-item" style="width: 100%;   height: 500px;" src="https://www.youtube.com/embed/W0LHTWG-UmQ?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=W0LHTWG-UmQ"></iframe>
+          <iframe class="embed-responsive-item" style="width: 100%;   height: 500px;" src="https://www.youtube.com/embed/iykoy4iCEHA"></iframe>
         </div>   
        </div>
   </div>
